2019-12-30  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.11.1

	* NEWS.md: Update for Ensmallen release 2.11.1

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.11.1
	* inst/include/ensmallen.hpp: ditto

	* .github/workflows/R-CMD-check.yaml: Added github actions for package checks.

	* .github/workflows/pr-commands.yaml: Enabled slash commands for documentation.

2019-09-30  James Balamuta  <balamut2@illinois.edu>

	* vignettes/using-rcppensmallen.Rmd: Improved wording.

	* .travis.yml: Disabled vignette building on TravisCI

2019-09-27  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.10.3

	* NEWS.md: Update for Ensmallen release 2.10.3

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.10.3
	* inst/include/ensmallen.hpp: ditto

	* vignettes/using-rcppensmallen.Rmd: Added a vignette describing use.

2019-09-07  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.10.0 and armadillo dependency

	* NEWS.md: Update for Ensmallen release 2.10.0

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.10.0
	* inst/include/ensmallen.hpp: ditto

	* inst/COPYRIGHTS: Added a copyright notice

	* inst/AUTHORS: Added an author notice

	* DESCRIPTION (Version): Mark new developer release

2019-08-09  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 1.16.0

	* NEWS.md: Update for Ensmallen release 1.16.0

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.16.0
	* inst/include/ensmallen.hpp: ditto

	* inst/include/ensmallen_bits/pso/pso.hpp: Fixed return type issue detected
	  by gcc 9.

2019-05-20  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 1.15.0

	* NEWS.md: Update for Ensmallen release 1.15.0

	* inst/include/ensmallen_bits/spsa: Removed unused `shuffle` parameter.

	* inst/include/ensmallen_bits/qhadam/qhadam_update: Reorder parameter initialization.

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.15.0